# claw-code

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  GEMINI_OAUTH.md  LICENSE  MEMORY.md  PARITY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  USAGE.md  concept.md  docker-compose.yml  example.env  how_to_run.md
.claw/plugins/: installed.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: anti_slop_triage.yml
.github/scripts/: check_release_readiness.py
.github/workflows/: release.yml  rust-ci.yml
.omx/cc2/: issue-parity-intake.json  issue-parity-intake.md  validate_issue_parity_intake.py
docs/: anti-slop-triage.md  g003-boot-session-verification-map.md  g004-events-reports-contract.md  g004-events-reports-verification-map.md  g005-branch-recovery-verification-map.md  g006-task-policy-board-verification-map.md  g007-mcp-lifecycle-mapping.md  g007-plugin-mcp-verification-map.md  g009-windows-docs-release-verification-map.md  g010-clone-disambiguation-metadata.md  g010-session-hygiene-verification-map.md  g011-acp-json-rpc-status-contract.md  g011-ecosystem-ops-ux-verification-map.md  g012-final-release-readiness-report.md  local-openai-compatible-providers.md  navigation-file-context.md  personal-assistant-roadmap.md  pr-issue-resolution-gate.md  pr-triage-g012-final-gate.json  roadmap-pr-goals.md  windows-install-release.md
rust/: .dockerignore  ARCHITECTURE.md  Cargo.toml  GEMINI_SUBAGENT_TEST.md  MOCK_PARITY_HARNESS.md  README.md  TODO.md
rust/crates/api/: Cargo.toml  DEPENDENCIES.md
rust/crates/api/benches/: request_building.rs
rust/crates/api/src/: client.rs  error.rs  http_client.rs  lib.rs  sse.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/src/providers/google_ai/: google_ai_tests.rs  mod.rs  mod.rs.bak
rust/crates/claw-analog/: Cargo.toml
rust/crates/claw-analog/src/: agents.rs  config_cmd.rs  doctor.rs  lib.rs  main.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lane_completion.rs  lib.rs
rust/crates/tools/tests/: path_scope_enforcement.rs
scripts/: dogfood-build.sh  generate_cc2_board.py  roadmap-check-ids.sh  roadmap-next-id.sh  validate_cc2_board.py
src/: commands.py  models.py  path_scope.py  permissions.py  query_engine.py  runtime.py  tools.py
tests/: test_porting_workspace.py  test_security_scope.py
(+51 files in other folders)
